deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rclob
  labels:
    app: rclob
