deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rclob
  namespace: rclob
  labels:
    app: rclob
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
      appProtocol: http
  selector:
    app: rclob
